# arba-cryp

./: .clang-format  CMakeLists.txt  README.md  cmake_quick_install.cmake  conanfile.py  cryp-config.cmake.in
cmake/config/: package-config.cmake.in
cmake/scripts/: quick_install.cmake
example/: CMakeLists.txt  symcryp_example.cpp  symcrypt_example.cpp  symcrypt_time_example.cpp
example/basic_cmake_project/: CMakeLists.txt  main.cpp
include.in/: version.hpp
include/arba/cryp/: config.hpp.in  symcrypt.hpp
include/cryp/: symcrypt.hpp
src/: symcryp.cpp  symcrypt.cpp
src/arba/cryp/: symcrypt.cpp
test/: CMakeLists.txt  project_version_tests.cpp  symcryp_tests.cpp  symcrypt_tests.cpp
test_package/: CMakeLists.txt  test_package.cpp
